--- a/public/admin/style.css
+++ b/public/admin/style.css
@@ -85,3 +85,57 @@
     font-size: 50px;
     opacity: .5;
 }
+.wrap-box-file{
+    width: 100%;
+    height: 60px;
+    border: 2px dashed rgb(0, 129, 175);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.wrap-box-file input{
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    position: absolute;
+    cursor: pointer;
+}
+.wrap-box-file .loading{
+    height: 100%;
+    position: absolute;
+    width: 0%;
+    background: rgb(0, 129, 175);
+    left: 0;
+    transition: 1s;
+}
+#main-table .wrap-img{
+    width: 100%;
+    height: 70px;
+    overflow: hidden;
+}
+#main-table .wrap-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+#main-table{
+    width: 100%;
+    user-select: none;
+}
+#main-table .image{
+    width: 50px;
+}
+#main-table thead,
+#main-table td{
+    text-align: center;
+    vertical-align: middle;
+}
+#main-table thead{
+    background: rgb(0, 103, 144);
+    height: 40px;
+    color: white;
+}
+#main-table tr:nth-child(2n){
+    background-color: rgb(242, 242, 242);
+}
